--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -2,6 +2,26 @@
 @tailwind components;
 @tailwind utilities;
 
-.test {
-	background-color: rgb(220 38 38);
+@layer base {
+	body {
+		@apply bg-slate-900 font-sans text-slate-200;
+	}
+}
+
+@layer components {
+	.btn-primary {
+		@apply
+			h-10
+			px-6
+			bg-sky-600
+			hover:bg-sky-500
+			font-semibold
+			text-sm
+			rounded-md
+			shadow-sm;
+	}
+
+	.text-input {
+		@apply text-gray-800 p-1 rounded-md w-32 text-sm bg-slate-300 shadow-sm;
+ 	}
 }
