Adds navbar and extra interval support

--- a/web/templates/header.html
+++ b/web/templates/header.html
@@ -9,9 +9,18 @@
 
 	<title>Music Guide</title>
 
+	<script src="https://unpkg.com/htmx.org@2.0.2" integrity="sha384-Y7hw+L/jvKeWIRRkqWYfPcvVxHzVzn5REgzbawhxAuQGwX1XWe70vji+VSeHOThJ" crossorigin="anonymous"></script>
+	
+
 	<link href="/static/css/output.css" rel="stylesheet">
 
+	<style>
+		@import url('');
+	</style>
 </head>
 
 <body>
+
+{{template "navbar"}}
+
 {{end}}
