--- a/web/static/css/input.css
+++ b/web/static/css/input.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+	.nav-link {
+		@apply text-white text-lg font-bold hover:text-gray-200 hover:drop-shadow-lg shadow-black px-2;
+	}
+
+	.text-input {
+		@apply block py-1 rounded-md shadow-sm focus:ring-1 focus:border-gray-300 border-gray-300;
+	}
+}
