--- a/web/templates/navbar.html
+++ b/web/templates/navbar.html
@@ -1,6 +1,6 @@
 {{define "navbar"}}
-<!-- <nav class="z-0"> -->
-	<div class="w-full flex flex-wrap items-center bg-cyan-700 mx-auto p-4">
+<div class="w-full bg-cyan-700">
+	<nav class="w-full flex flex-wrap items-center bg-cyan-700 mx-12 p-4">
 
 		<a class="text-white text-3xl font-bold target:shadow-lg shadow-black px-4" href="/">Music Guide</a>
 
@@ -8,7 +8,6 @@
 			<a id="intervals" class="nav-link" href="/intervals">Interval Calculator</a>
 			<a id="circle" class="nav-link" href="/circle">Circle of Fifths</a>
 		</span>
-
-	</div>
-<!-- </nav> -->
+	</nav>
+</div>
 {{end}}
