Adds templ and a working interval calculator page

--- a/views/templates/intervals.html
+++ b/views/templates/intervals.html
@@ -13,7 +13,7 @@
 			</span>
 
 			<button class="text-white bg-cyan-600 hover:bg-cyan-700 text-sm font-bold rounded-md py-1 px-3" type="submit">Submit</button>
-		<div>
+		</div>
 	</form>
 </div>
 
