--- a/views/layouts/base.templ
+++ b/views/layouts/base.templ
@@ -16,6 +16,8 @@ templ Base() {
 		<body>
 			@components.Navbar()
 			{ children... }
+			<div class="bg-green-700">
+			</div>
 		</body>
 	</html>
 }
