--- a/views/components/input.templ
+++ b/views/components/input.templ
@@ -1,13 +1,38 @@
 package components
 
-templ TextInput(name string) {
-	<div>
-		TODO: normal text input
+import "fmt"
+
+templ TextInput(label, name, value string) {
+	<div hx-target="this" hx-swap="outerHTML">
+		<label for={ name } class="block text-sm font-medium leading-6 text-gray-900">{ label }</label>
+		<input
+			id={ name }
+			name={ name }
+			value={ value }
+			hx-vals={ fmt.Sprintf(`{"label":"%s"}`, label) }
+			type="text"
+			class="block py-1 rounded-md shadow-sm focus:ring-1 focus:border-gray-300 border-gray-300"
+			placeholder="c#0"
+			hx-post="/intervals/validate-note"
+		/>
 	</div>
 }
 
-templ TextInputInvalid(label, name string, error_message string) {
-	<div>
-		TODO: invalid text input with message: {error_message}
+templ TextInputInvalid(label, name, value, error_message string) {
+	<div hx-target="this" hx-swap="outerHTML">
+		<label for={ name } class="block text-sm font-medium leading-6 text-gray-900">{ label }</label>
+		<input
+			id={ name }
+			name={ name }
+			value={ value }
+			hx-vals={ fmt.Sprintf(`{"label":"%s"}`, label) }
+			type="text"
+			class="block rounded-md py-1 focus:ring-1 border-red-400 focus:border-red-400 focus:ring-red-500"
+			placeholder="c#0"
+			hx-post="/intervals/validate-note"
+		/>
+		<p class="text-xs font-normal text-red-500">
+			{ error_message }
+		</p>
 	</div>
 }
