--- a/views/intervals/intervals.templ
+++ b/views/intervals/intervals.templ
@@ -14,8 +14,8 @@ templ Intervals(history []string) {
 			<div class="flex-row">
 				<div class="flex gap-6">
 					<form class="space-y-2" hx-target="#interval-entry" hx-swap="outerHTML" hx-post="/intervals">
-						@components.TextInput("Note 1", "note1", "note1")
-						@components.TextInput("Note 2", "note2", "note2")
+						@components.TextInput("Note 1", "note1", "")
+						@components.TextInput("Note 2", "note2", "")
 						<div>
 							<button
 								type="submit"
@@ -51,6 +51,8 @@ templ Intervals(history []string) {
 }
 
 templ IntervalEntry(interval string) {
+	// TODO: show previous input values and style nicely
+	// <i class="fa-solid fa-arrow-right"></i>
 	<div id="interval-entry"></div>
 	if len(interval) > 0 {
 		<li class="list-none">{ interval }</li>
