--- a/views/components/input.templ
+++ b/views/components/input.templ
@@ -14,8 +14,7 @@ templ TextInput(label, name, value string) {
 			class="block py-1 rounded-md shadow-sm focus:ring-1 focus:border-gray-300 border-gray-300"
 			placeholder="c#0"
 			hx-post="/intervals/validate-note"
-			hx-trigger="change submit"
-			hx-sync="closest form:drop"
+			hx-trigger="change,submit from:closest form"
 		/>
 	</div>
 }
@@ -32,8 +31,7 @@ templ TextInputInvalid(label, name, value, error_message string) {
 			class="block rounded-md py-1 focus:ring-1 border-red-400 focus:border-red-400 focus:ring-red-500"
 			placeholder="c#0"
 			hx-post="/intervals/validate-note"
-			hx-trigger="change submit"
-			hx-sync="closest form:drop"
+			hx-trigger="change,submit from:closest form"
 		/>
 		<p class="text-xs font-normal text-red-500">
 			{ error_message }
